--- a/package.json
+++ b/package.json
@@ -6,13 +6,12 @@
     "lodash": "^4.17.11",
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.3",
-    "mobx-state-tree": "^3.12.2",
+    "mobx-state-tree": "^3.13.0",
     "moment": "^2.24.0",
     "path-to-regexp": "^3.0.0",
     "prop-types": "^15.7.2",
     "qs": "^6.7.0",
-    "react": "^16.8.6",
-    "react-document-title": "^2.0.3"
+    "react": "^16.8.6"
   },
   "devDependencies": {
     "@commitlint/cli": "^7.5.2",
