--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "antd": "^3.23.6",
+    "antd": "^3.24.0",
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "lodash": "^4.17.15",
@@ -31,11 +31,12 @@
     "prettier": "^1.18.2",
     "stylelint": "^11.1.1",
     "stylelint-config-prettier": "^6.0.0",
-    "stylelint-config-standard": "^19.0.0",
+    "stylelint-config-recommended": "^3.0.0",
     "stylelint-order": "^3.1.1",
-    "umi": "^2.10.4",
+    "stylelint-prettier": "^1.1.1",
+    "umi": "^2.10.5",
     "umi-plugin-mobx-state-tree": "^0.0.1",
-    "umi-plugin-react": "^1.12.5"
+    "umi-plugin-react": "^1.12.6"
   },
   "engines": {
     "node": ">=8.0.0"
