--- a/.eslintrc
+++ b/.eslintrc
@@ -38,15 +38,13 @@
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
-  "plugins": [
-    "react-hooks",
-    "prettier"
-  ],
+  "plugins": ["react-hooks", "prettier"],
   "root": true,
   "rules": {
     "no-param-reassign": "off",
     "prettier/prettier": "error",
     "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn",
     "react/forbid-component-props": [
       "error",
       {
